--- a/json/config.json
+++ b/json/config.json
@@ -3,7 +3,7 @@
     "banner": " ____                 _ _____ \n| __ )  __ _ ___  ___/ |___  |\n|  _ \\ / _` / __|/ _ \\ |  / / \n| |_) | (_| \\__ \\  __/ | / /  \n|____/ \\__,_|___/\\___|_|/_/   \n\nAuthor: HiTek#8874",
     "languages": ["en"],
     "chosen_language": "en",
-    "status": ["._.", "o.o"],
+    "status": ["._.", "o_o"],
     "three_dots": [".", ".", ".\n"],
     "ore_icons": ["https://i.postimg.cc/xCNFhrzq/ore4.png", "https://i.postimg.cc/Sscfcm9L/ore6.png"],
     "tz": "America/Vancouver"
