--- a/json/config.json
+++ b/json/config.json
@@ -17,5 +17,15 @@
         "dialogue": "0x607d8b",
         "info": "0x607d8b",
         "start": "0x607d8b"
+    },
+    "sectors": {
+        "width": {
+            "min": -100,
+            "max": 100
+        },
+        "height": {
+            "min": -100,
+            "max": 100
+        }
     }
 }
