--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ constants = "^0.6.0"
 discord = "^1.7.3"
 pytz = "^2021.3"
 replit = "^3.2.4"
+dictdiffer = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
