Added more depth to db command (can probably make recursive in the future). Added ping to online. Stable.

--- a/json/config.json
+++ b/json/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": ".",
-    "banner": " ____                 _ _____ \n| __ )  __ _ ___  ___/ |___  |\n|  _ \\ / _` / __|/ _ \\ |  / / \n| |_) | (_| \\__ \\  __/ | / /  \n|____/ \\__,_|___/\\___|_|/_/   \n\nAuthor: HiTek#8874",
+    "banner": " ____                 _ _____ \n| __ )  __ _ ___  ___/ |___  |\n|  _ \\ / _` / __|/ _ \\ |  / / \n| |_) | (_| \\__ \\  __/ | / /  \n|____/ \\__,_|___/\\___|_|/_/   \n\nAuthor: HiTek#8874 + Junibug31#5079",
     "languages": ["en"],
     "chosen_language": "en",
     "status": ["._.", "o.o"],
