--- a/json/config.json
+++ b/json/config.json
@@ -1,8 +1,8 @@
 {
     "prefix": ".",
-    "banner": " ____                 _ _____ \n| __ )  __ _ ___  ___/ |___  |\n|  _ \\ / _` / __|/ _ \\ |  / / \n| |_) | (_| \\__ \\  __/ | / /  \n|____/ \\__,_|___/\\___|_|/_/   \n\nAuthor: HiTek#8874 + Junibug31#5079",
-    "languages": ["en"],
-    "chosen_language": "en",
+    "banner": " ____                 _ _____   ,-,-.\n| __ )  __ _ ___  ___/ |___  | /.( +.\\\n|  _ \\ / _` / __|/ _ \\ |  / /  \\ {. */\n| |_) | (_| \\__ \\  __/ | / /    `-`-'\n|____/ \\__,_|___/\\___|_|/_/   \n\nAuthor: HiTek#8874 + Junibug31#5079",
+    "languages": ["en-US"],
+    "chosen_language": "en-US",
     "status": ["._.", "o.o"],
     "three_dots": [".", ".", ".\n"],
     "tz": "America/Vancouver",
@@ -24,4 +24,4 @@
         "start": "0x607d8b",
         "success": "0x2ecc36"
     }
-}
+}           
