--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ discord = "^1.7.3"
 pytz = "^2021.3"
 replit = "^3.2.4"
 dictdiffer = "^0.9.0"
+Flask = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 
