Started cog.utils.trm to be the only thing printing to trm (maybe a class with a log of all past prints?), slightly restructured colors dict in config, and updated project

--- a/json/config.json
+++ b/json/config.json
@@ -17,11 +17,17 @@
         "success": 120.0
     },
     "colors": {
-        "error": "0xe74c3c",
-        "mining": "0x3f515a",
-        "dialogue": "0x607d8b",
-        "info": "0x607d8b",
-        "start": "0x607d8b",
-        "success": "0x2ecc36"
+        "embed": {
+            "error": "0xe74c3c",
+            "mining": "0x3f515a",
+            "dialogue": "0x607d8b",
+            "info": "0x607d8b",
+            "start": "0x607d8b",
+            "success": "0x2ecc36"
+        }
+        "trm": {
+            "failed": "0xe74c3c",
+            "success": "0xe74c3c"
+        }
     }
 }           
